# kairos-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  KAIROS_CONSTITUTION.md  README.md  RELEASE_NOTES.md  ROADMAP.md  docker-compose.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: ai_provider_router.py  ai_runtime.py  auth_platform.py  authentication.py  codex_compatibility.py  codex_runtime.py  config.py  connectors.py  fallback.py  logging_config.py  monitoring.py  openai_codex_auth.py  plugins.py  provider_health.py  provider_session.py  routing_policy.py
apps/api/app/db/: base.py  migrations.py  seed.py  session.py
apps/api/app/models/: __init__.py  approval.py  decision_plan.py  memory.py  project.py  task.py  timeline.py  (+2 more)
apps/api/scripts/: poc_codex_cli.py
apps/api/tests/: test_ai.py  test_ai_models.py  test_ai_ollama_dispatch.py  test_ai_prompt_dry_run.py  test_ai_provider_router.py  test_ai_readiness.py  test_ai_response_parser.py  test_approvals.py  test_auth.py  test_auth_platform.py  test_authentication.py  test_codex_compatibility.py  test_codex_runtime.py  test_commandcode_provider.py  test_connectors.py  test_decision_plan_schema.py  test_decision_plan_service.py  test_decision_plans_api.py  test_fallback.py  test_health.py  test_monitoring.py  test_openai_codex_auth.py  test_planner_engine.py  test_plugins.py  test_provider_health.py  test_provider_platform_integration.py  test_provider_session.py  test_routing_policy.py  test_workflow_runs.py
(+139 files in other folders)
